Fix for Win32 part of bug 321098: onmouseover alert() causing multiple stacked alert dialogs r+sr=roc